# tokenizers-converter

./: .gitignore  README.md  pyproject.toml
src/tokenizers_converter/: __init__.py  __main__.py
src/tokenizers_converter/commands/: __init__.py  convert.py  list.py  validate.py
src/tokenizers_converter/tokenizers/: __init__.py  baichuan_converter.py  ernie4_5_converter.py
tests/: test_baichuan_converter.py  test_cli.py  test_ernie4_5_converter.py
